# Bill_Tracker

./: .env.example  .gitignore  README.md
dashboard/: .env.local.example  package.json  tailwind.config.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/app/api/bills/: route.ts
dashboard/app/api/scrape/: route.ts
dashboard/app/api/status/: route.ts
dashboard/components/: bills-table.tsx  refresh-button.tsx  spending-chart.tsx  stat-card.tsx
dashboard/components/ui/: badge.tsx  card.tsx  separator.tsx  table.tsx
dashboard/types/: bill.ts
scraper/: api.py  main.py  pyproject.toml
scraper/scrapers/: alderwood.py  axiom.py  base.py  insurance.py  king_county.py  pse_gas.py  rocket_loans.py  snohomish_pud.py  waste_management.py  wsecu.py
